# network-monitor

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  main.py
app/core/: models.py  status.py
app/core/database/: connection.py  schema.py  seed.py
app/core/event_bus/: bus.py
app/core/notifications/: service.py
app/core/runtime/: paths.py
app/core/settings/: service.py
app/engines/alert/: engine.py
app/engines/heartbeat/: engine.py
app/engines/http_check/: engine.py
app/engines/network_discovery/: classification.py  engine.py
app/engines/port_check/: engine.py
app/engines/reporting/: engine.py
app/engines/snmp_monitor/: engine.py
app/engines/traffic_visibility/: engine.py
app/modules/alerts/: repository.py  service.py
app/modules/dashboard/: service.py
app/modules/devices/: actions.py  repository.py  service.py
app/modules/discovery/: actions.py  service.py
app/ui/: main_window.py
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  FIRST_RUN.md  ROADMAP.md  SCREENSHOTS.md
packaging/: heisenberg-network-monitor.spec
scripts/: build_windows_exe.bat  build_windows_exe.ps1  smoke_check.py
tests/: conftest.py  test_alert_engine.py  test_device_service.py  test_discovery_classification.py  test_reporting.py  test_smoke.py  test_status_logic.py  test_traffic_visibility.py
(+14 files in other folders)
